z-index fix for infobox in I.E.

--- a/css/infobox.scss
+++ b/css/infobox.scss
@@ -5,6 +5,7 @@
   width: 225px;
   background-color: #ffffff;
   display: none;
+  z-index: 100;
   
   > header {
     font-family: 'Gotham-Bold';
@@ -37,7 +38,7 @@
   cursor: pointer;
   padding: 15px 0px;
   height: 28px;
-  z-index: 1;
+  z-index: 101;
   
   > div {
     width: 28px;
